2008-08-18  Roland Mas  <lolando@debian.org>

	* plugins/scmcvs/cronjobs/history_parse.php: Fixed DB commit
	underflow (patch #2207 by Yann Dirson).

	* common/include/Group.class.php: Added new hooks (patch #1715 by
	Nicolas Quienot).
	* common/include/User.class.php: Ditto.

	* cronjobs/db_trove_maint.php: Enable showing private projects in
	Trove map (patch #1264 by Vittal Aithal).

2008-07-20  Roland Mas  <lolando@debian.org>

	* common/reporting/report_utils.php: Search user by the initial
	letter of their username, as well as their lastname.

	* etc/local.d/10database.env: Only call apache_request_headers
	when available.

	* common/reporting/ReportTrackerAct.class.php: Fixed off-by-one
	bug in reports.

	* www/tracker/reporting/index.php: Added explicit type conversion
	in SQL query.

2008-05-21  Roland Mas  <lolando@debian.org>

	* deb-specific/sqlparser.pm: Added support for /* comments */ in
	SQL files (except that contrary to C, they can be nested).

2008-05-14  Roland Mas  <lolando@debian.org>

	* deb-specific/ssh_dump_update.pl: Fixed syntax error.

	* utils/include.pl (write_array_file): Fixed bad logic that
	rendered the function inoperant.

2008-05-13  Roland Mas  <lolando@debian.org>

	* utils/include.pl: Use temporary files and renaming to avoid
	insecure file handling (CVE-2008-0167).
	* deb-specific/ssh_dump_update.pl: Handle potential failure in
	write_array_file.

2008-05-05  Roland Mas  <lolando@debian.org>

	* www/soap/nusoap.php: Renamed soapclient class to gfsoapclient,
	for compatibility with PHP5.

2008-04-24  Roland Mas  <lolando@debian.org>

	* etc/local.d/10database.header: Read database authentication info
	from HTTP headers in addition to environment variables.
	* plugins/mediawiki/mediawiki-skin/GForge.php: Ditto.
	* etc/httpd.d/httpd.secrets: Provide this info using the
	RequestHeader directive.
	* utils/install-apache.sh: Load appropriate module.

2008-03-15  Christian Bayle <bayle@debian.org>
	